# pokertable

./: pyproject.toml
examples/llm-integration-tests/: README.md  helpers.py  requirements.txt  test_agno.py  test_anthropic_sdk.py  test_crewai.py  test_fireworks.py  test_langchain.py  test_lmstudio.py  test_multi_framework.py  test_multi_provider.py  test_openai_sdk.py  test_pydantic_ai.py  test_smolagents.py
examples/llm-integration-tests/frameworks/: __init__.py  agno_adapter.py  crewai_adapter.py  langchain_adapter.py  pydantic_ai_adapter.py  smolagents_adapter.py
examples/llm-integration-tests/providers/: __init__.py  anthropic_adapter.py  openai_adapter.py
src/poker_engine/: __init__.py  cards.py  cli.py  engine.py  equity.py
src/poker_engine/core/: __init__.py  cards.py  engine.py  equity.py
src/poker_engine/players/: __init__.py  base.py  human.py  llm.py  random_player.py  scripted.py
src/poker_engine/tools/: __init__.py  adapters.py  decorator.py  poker_tools.py  registry.py  schema.py
src/poker_engine/tournament/: __init__.py  blind_schedule.py  director.py  events.py  history.py  payout.py  table_manager.py  tilt.py
src/poker_engine/tui/: __init__.py  action_feed.py  app.py  card_display.py  chat_panel.py  commentary.py  console_display.py  minimal_display.py  stats_panel.py  table_view.py  theme.py
tests/: test_cards.py  test_engine.py  test_equity.py
tests/core/: test_cards.py  test_engine.py  test_engine_edge_cases.py  test_equity.py
tests/players/: test_llm.py  test_players.py
tests/tools/: test_adapters.py  test_decorator.py  test_poker_tools.py  test_poker_tools_edge_cases.py  test_registry.py  test_schema.py
tests/tournament/: test_table_manager.py  test_tilt.py  test_tournament.py
tests/tui/: test_rendering.py
tmp-playground/: run_real_table.py  run_real_tui.py
