[project]
name = "pokertable"
version = "0.2.0"
description = "Pure Texas Hold'em engine with LLM agent tournament framework and TUI."
authors = [{ name = "chiruu12" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
keywords = ["poker", "texas-holdem", "game-engine", "ai-agents", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment",
]
dependencies = []

[project.optional-dependencies]
tui = ["rich>=13.0", "typer>=0.12"]
config = ["pyyaml>=6.0"]
llm = ["httpx>=0.27"]
full = ["rich>=13.0", "typer>=0.12", "pyyaml>=6.0", "httpx>=0.27"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.5",
]

[project.urls]
Homepage = "https://github.com/chiruu12/pokertable"
Repository = "https://github.com/chiruu12/pokertable"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/poker_engine"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[project.scripts]
poker = "poker_engine.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
